<resources>
    <string name="app_name">AlTayerSemih</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="product_config_title_color">Color</string>
    <string name="product_config_title_size">Size</string>
    <string name="detail_description_label">Description</string>
    <string name="detail_size_and_fit_label">Size and Fit</string>
    <string name="general_error">Oops! Something went wrong :(</string>
    <string name="retry">Retry</string>
    <string name="product_added_to_bag">Product is added to your bag</string>
</resources>
