<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detailAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detailCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_toolbar_image_height"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <com.sembozdemir.altayersemih.customview.ClickableViewPager
                android:id="@+id/detailViewPagerPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/detailCircleIndicatorPhotos"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom|center_horizontal" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detailToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white"
                tools:title="Just do it T-shirt" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_default">

            <TextView
                android:id="@+id/detailTextViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextStyle.20"
                tools:text="Nike just do it T-shirt description" />

            <TextView
                android:id="@+id/detailTextViewDesigner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textAppearance="@style/TextStyle.14.Bold"
                tools:text="NIKE" />

            <TextView
                android:id="@+id/detailTextViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:textAppearance="@style/TextStyle.16.Bold"
                tools:text="$239" />

            <include layout="@layout/layout_divider" />

            <LinearLayout
                android:id="@+id/detailLinearLayoutColorAndSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_config_title_color"
                        android:textAppearance="@style/TextStyle.14"
                        android:textColor="@color/gray" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_small"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/detailImageViewColorCircle"
                            android:layout_width="@dimen/space_default"
                            android:layout_height="@dimen/space_default"
                            android:src="@android:color/transparent"
                            app:civ_border_color="@color/black"
                            app:civ_border_width="@dimen/space_tiny" />

                        <TextView
                            android:id="@+id/detailTextViewColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/space_small"
                            android:textAppearance="@style/TextStyle.16.Bold"
                            tools:text="Blue" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_config_title_size"
                        android:textAppearance="@style/TextStyle.14"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/detailTextViewSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_small"
                        android:textAppearance="@style/TextStyle.16"
                        tools:text="XS" />

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/layout_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_description_label"
                android:textAppearance="@style/TextStyle.14"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/detailTextViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textAppearance="@style/TextStyle.16.Bold"
                tools:text="NIKE Tshirt is nice" />

            <include layout="@layout/layout_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_size_and_fit_label"
                android:textAppearance="@style/TextStyle.14"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/detailTextViewSizeAndFit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textAppearance="@style/TextStyle.16.Bold"
                tools:text="NIKE Tshirt is nice" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_bottom_space_height" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/detailButtonBottomSheetExpand"
        style="@style/ButtonStyle.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/space_default"
        android:text="@string/add_to_bag" />

</android.support.design.widget.CoordinatorLayout>